# xlsxpress

./: .git-cheatsheet.md  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPER_SETUP.md  Makefile  PROJECT_STATUS.md  README.md  REQUIREMENTS.md  TODO.md  pyproject.toml  setup.sh  test_reader_local.sh
.github/: CICD_SETUP.md  FUNDING.yml  QUICKSTART.md  RELEASE_CHECKLIST.md
.github/workflows/: build.yml  ci.yml  release.yml  test-release.yml
python/xlsxpress/: __init__.py
python/xlsxpress/compat/: __init__.py
src/: error.rs  lib.rs  reader.rs  writer.rs
src/charts/: area.rs  bar.rs  chart.rs  column.rs  doughnut.rs  line.rs  mod.rs  pie.rs  scatter.rs
src/compat/: cell.rs  mod.rs  utils.rs  workbook.rs  worksheet.rs
src/python/: bindings.rs  charts.rs  mod.rs  styles.rs  validation.rs
src/styles/: alignment.rs  border.rs  fill.rs  font.rs  mod.rs  number_format.rs  style.rs
src/validation/: mod.rs  types.rs
tests/fixtures/: empty.xlsx  multi_sheet.xlsx  test.xlsx
tests/python/: test_basic.py  test_reader.py
tests/rust/: mod.rs
