[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "xlsxpress"
version = "0.1.0"
description = "High-performance Excel processing library built with Rust"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["excel", "xlsx", "spreadsheet", "openpyxl", "xlsxwriter"]
authors = [
    { name = "XlsXpress Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]

dependencies = [
    # Core dependencies (always installed)
]

[project.optional-dependencies]
# Optional dependencies for full functionality
polars = ["polars>=0.19"]

# Development dependencies
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.7",
    "bandit>=1.7",
    "polars>=0.19",
    "pre-commit>=3.5",
]

# Documentation dependencies
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/xlsxpress"
Documentation = "https://xlsxpress.readthedocs.io"
Repository = "https://github.com/yourusername/xlsxpress"
Issues = "https://github.com/yourusername/xlsxpress/issues"
Changelog = "https://github.com/yourusername/xlsxpress/blob/main/CHANGELOG.md"

[tool.maturin]
# Build configuration for maturin
python-source = "python"
features = ["pyo3/extension-module"]

# Platform-specific wheels
[tool.maturin.target.x86_64-unknown-linux-gnu]
manylinux = "auto"

[tool.maturin.target.aarch64-unknown-linux-gnu]
manylinux = "auto"

[tool.maturin.target.x86_64-apple-darwin]
macos-deployment-target = "10.12"

[tool.maturin.target.aarch64-apple-darwin]
macos-deployment-target = "11.0"

# Python testing with pytest
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=xlsxpress",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]

# Code coverage
[tool.coverage.run]
branch = true
source = ["xlsxpress"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/compat/*",  # Exclude compatibility layer until implemented
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

# Black code formatting
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff linting
[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "T",   # flake8-print
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # use of assert (needed for tests)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "T201"]  # Allow assert and print in tests

[tool.ruff.isort]
known-first-party = ["xlsxpress"]

# MyPy type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Bandit security scanning
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert_used in tests
